[package]
name = "kozuka"
version = "0.1.0"
edition = "2021"
description = "awkwords replacement in WASM"
license = "MIT"
repository = "https://github.com/auctumnus/kozuka"

[dependencies]
anyhow = "1.0.82"
chumsky = "0.9.3"
once_cell = "1.19.0"
rand = "0.8.5"
wasm-bindgen = "0.2.92"
getrandom = { version = "0.2.14", features = ["js"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
